Subhead font size and fix z-index with photos and vignette

--- a/less/app.less
+++ b/less/app.less
@@ -197,7 +197,7 @@ a.nav-btn  {
 #browse-list {
 	position: absolute;
 	top: @nav-height;
-	z-index: 1100;
+	z-index: 11000;
 	background-color: @audio-background-color;
     opacity: .8;
 	border-radius: 0 0 6px 6px;
@@ -255,7 +255,7 @@ a.nav-btn  {
     -webkit-box-shadow: 0px 0px 0px 2500px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: 0px 0px 0px 2500px rgba(0, 0, 0, 0.6);
 
-    z-index: 10000;
+    z-index: 500;
 }
 
 #streetview-link {
@@ -648,6 +648,7 @@ a.nav-btn  {
             max-height: 100%;
             overflow: scroll;
 	        h1 { font-size: 30px; margin-bottom: 8px;}
+            h2 { font-size: 18px; margin-bottom: 8px;}
 	        p { font-size: 16px; margin-bottom: 5px; }
 	        
 	        .modal-body { 
